--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "concurrently": "^9.1.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
@@ -17,13 +20,29 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "cd src/shared/database && json-server --watch -p 8888 db.json",
+    "start-dev": "concurrently \"npm start\" \"npm run json-server\"",
+    "coverage":"jest --coverage --watchAll"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "jest":{
+    "collectCoverage":true,
+    "coverageDirectory":"coverage",
+    "coverageReporters" :["json","lcov","test","clover"],
+    "coverageThreshold":{
+      "global":{
+        "branches":80,
+        "functions":80,
+        "lines":80,
+        "statements":80
+      }
+    }
   },
   "browserslist": {
     "production": [
